--- a/public/index.html
+++ b/public/index.html
@@ -1,40 +1,47 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Munch, a Social Media App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>Munch</title>
   </head>
-
-  <body> 
-    <nav class = "navbar navbar-light bg-light"></nav>
-    <h1> Munch </h1>
-<div style="height: 1143.9px; display: flex; flex-direction: column; justify-content: space-between;">
-  <div
-      style="height: 400px; width: 400px; background: linear-gradient(120deg, rgb(255, 255, 255), rgb(229, 53, 82) 90%); position: absolute; right: -320px; top: 381.3px; z-index: -1; border-radius: 140px; transform: rotate(330deg);">
-  </div>
-  <div
-      style="height: 700px; width: 400px; background: linear-gradient(120deg, rgb(255, 255, 255), rgb(229, 53, 82) 90%); position: absolute; left: -300px; bottom: 100px; z-index: -1; border-radius: 150px; transform: rotate(160deg);">
-  </div>
-  <div
-      style="display: flex; flex-direction: column; align-items: center; flex: 1 1 0%; justify-content: space-evenly;">
-      <div>
-          <h1 class="sc-iBkjds jiMsFe" style="text-align: center;">Come find out how </h1>
-          <h1 class="sc-ftvSup hGCWUk" style="margin-top: -15px; margin-bottom: -15px; text-align: center;">easy
-              social media marketing is!</h1>
-      </div>
-</div>
-
-<div style="height: 1398.1px; padding-left: 10%; padding-top: 5%;">
-  <div style="display: flex;">
-                  <div style="display: flex; flex-direction: column; margin-left: 24px;">
-                      <div class="sc-jSMfEi iElCfA" style="margin-bottom: 28px;">Tell us where you're going,</div>
-                      <div class="sc-jSMfEi iElCfA" style="margin-bottom: 28px;">What you want to do,</div>
-                      <div class="sc-jSMfEi iElCfA" style="margin-bottom: 28px;">Your budget and preferences</div>
-                      <div class="sc-jSMfEi iElCfA" style="margin-bottom: 0px;">We'll handle the rest!</div>
-                  </div>
-              </div>
-          </div>
-
-      </div>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
+  <script type=""
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+</html>
