--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://www.socialintents.com/api/chat/socialintents.1.3.js#2c9fa6c388035f53018803e4815f0038" async="async"></script>
   </body>
   <script type=""></script>
 </html>
